responsive styles start

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "jquery-validation": "^1.19.1"
   },
   "devDependencies": {
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-watch": "^5.0.1"
